fixed blog footer on mobile

--- a/assets/scss/colors.scss
+++ b/assets/scss/colors.scss
@@ -17,8 +17,8 @@ $enable-shadows: false ;
 
 body {
     font-family: D DIN, sans-serif;
-    overflow-x: hidden;
-    overflow: -moz-scrollbars-horizontal;
+    // overflow-x: hidden;
+    // overflow: -moz-scrollbars-horizontal;
   }
 
 h1 {
@@ -210,10 +210,9 @@ h1.common-headline {
 
 .card-footer
 {
+    border-top: 1px #DFDFDF solid;
     padding: 1.25rem 1.5rem;
-
-    border-top: 1px solid rgba(0, 0, 0, .05); 
-    background-color: #fff;
+    background: none;
 }
 .card-footer:last-child
 {
